[project]
name = "testcontainers-spannerbox"
version = "0.1.0-dev"
description = ""
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Isman Firmansyah"},
    {email = "isman.firmansyah@gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "testcontainers-core"
]
requires-python = ">=3.8"

[build-system]
requires = [
    # The minimum setuptools version is specific to the PEP 517 backend,
    # and may be stricter than the version required in `setup.cfg`
    "setuptools>=40.6.0,!=60.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.mypy]
strict = true
# follow_imports = "silent"
# implicit_reexport = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.core.*"
]
ignore_missing_imports = true
